2006-05-20  Derek Price  <derek@ximbiot.com>

	* patch.c (rdiff_usage): Remove obsolete -V argument.
	(main): Remove -V processing.

	* patch.c (rdiff_usage): Use {} around required argument.
	* tag.c (rtag_usage): tag/date is not actually a required argument.

2006-05-20  Mark D. Baushke  <mdb@gnu.org>

	* subr.h (is_admin): is_admin() is used in expressions, so default
	to 'true' rather than 'true;' for the
	!defined(HAVE_CVS_ADMIN_GROUP) case.

2006-05-20  Lawrence Jones  <lawrence.jones@ugs.com>

	* tag.c (rtag_usage): Required alternatives should use {}, not ().

2006-05-19  Derek Price  <derek@ximbiot.com>

	* tag.c (tag_usage, rtag_usage): Clarify & correct usage.

2006-05-17  Mark D. Baushke  <mdb@gnu.org>

	* logmsg.c (logmsg_list_to_args_proc): Deal with T_CONFLICT
	action which seems only to happen in the proxycheck files-12r
	test.
	* commit.c (precommit_list_to_args_proc): Duplicate logmsg.c code.

	* commit.c (check_fileproc): Backout change for "NONE"->"0" in
	added files.
	* sanity.sh (info-intfmt-10,info-newfmt-7): Update tests for above
	change.

2006-05-17  Derek Price  <derek@ximbiot.com>

	* update.c (join_rev1, join_date1, join_rev2, join_date2): Make const.
	(join_file): Make jrev1, jdate1, jrev2, & jdate2 const.

	* sign.c (sign_usage): Correct -rTAG synopsis.
	* verify.c: Correct some header comment blocks.
	(iget_verify_checkouts): Return VERIFY_OFF, not false.

	* main.c (cmd_usage): Add sign & verify synopsis.
	* sign.c (sign_usage): Reformat.

	* commit.c (checkaddfile): Prefer TAG_HEAD macro to the literal string.

2006-05-16  Derek Price  <derek@ximbiot.com>

	* commit.c (precommit_list_to_args_proc), logmsg.c
	(logmsg_list_to_args_proc): Provide default case to suppress -Wall
	warning.

2006-05-16  Mark D. Baushke  <mdb@gnu.org>

	* commit.c (check_fileproc): Set rev_old to "0" instead of NULL
	when UseNewInfoFmtStrings.
	(commit_fileproc): Set rev_new for removed files when
	UseNewInfoFmtStrings.